--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,20 @@
-title: Minimal theme
+title: <p align="center"> Aakash Sharma </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+
+description:
+  <p align="center">
+  <a href="">Resume</a> |
+  <a href="https://www.linkedin.com/in/aakashsharma804/">LinkedIn</a> |
+  <a href="https://github.com/aakash804">GitHub</a>
+  
+  <br>   
+  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
+  Also handing the Big Data from real-time Ad call data.
+  Worked with IBM Research at Big Data Analytics team.
+  Working in Financial domain for 4 years.
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
