--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Aakash Sharma </p>
-logo: /assets/img/logo.png
+logo: /assets/img/WhatsApp Image 2022-05-03 at 6.11.33 PM.jpeg
 
 description:
   <p align="center">
@@ -10,7 +10,6 @@ description:
   <br>   
   I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
   Also handing the Big Data from real-time Ad call data.
-  Worked with IBM Research at Big Data Analytics team.
   Working in Financial domain for 4 years.
   <br>
   </p>
